Add new Personalization in the login, signUp, recoverChangePW, recoverSendCode pages. Creation of the basic structure in Principal page.

--- a/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
@@ -12,26 +12,26 @@
     <section class="darkMain">
         <div class="container text-white">
             <div class="row d-flex justify-content-between">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                     <from>
-                        <h2>Recupera tu contraseña</h2>
-                        <p>El pin es Correcto</p>
+                        <h1 class="secColor">Recupera tu contraseña</h1>
+                        <p class="fw-bold">El pin es Correcto</p>
                         <form asp-controller="Home" asp-action="SignUpAction" method="post">
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="newPassword" class="control-label">NUEVA CONTRASEÑA</label>
                                 <input type="password" id="newPassword" name="newPassword" class="form-control" />
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="newPassword2" class="control-label">CONFIRMA LA NUEVA CONTRASEÑA</label>
                                 <input type="password" id="newPassword2" name="newPassword2" class="form-control" />
                             </div>
-                            <button type="submit" class="btn btn-primary m-2 fs-5">CONTINUAR</button>
+                            <button type="submit" class="btn btn-light secColor btn-form fw-bolder fs-5">CONTINUAR</button>
                         </form>
                     </from>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4 text-center">
                     <img class="img-fluid" src="~/Images/logoRecover.png" />
-                    <h1><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
+                    <h1 class="font-title title-page "><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
                 </div>
             </div>
 
