--- a/HomeHero/Views/HeroViews/SignUp.cshtml
+++ b/HomeHero/Views/HeroViews/SignUp.cshtml
@@ -12,34 +12,32 @@
     <section class="darkMain">
         <div class="container text-white">
             <div class="row d-flex justify-content-between">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 text-center p-4">
                     <img class="img-fluid" src="~/Images/SignUp.png"/>
-                    <h1><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
+                    <p class="font-title title-page"><span class="h">H</span>ome<span class="h">H</span>ero</p>
                 </div>
-                <div class="col-6">
-                    <from>
-                        <h2 > Crear una cuenta nueva</h2>
-                        <p>¿Ya estás registrado?<a asp-controller="Home" asp-action="LogIn">Inicia sesión aquí.</a></p>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                        <h2 class="priColor h1 p-2"> Crear una cuenta nueva</h2>
+                    <p class="fs-6">¿Ya estás registrado?  <a class="text-decoration-none priColor fw-bold" asp-controller="Home" asp-action="LogIn">Inicia sesión aquí.</a></p>
                         <form asp-controller="Home" asp-action="SignUpAction" method="post">
-                            <div class="form-group">
+                            <div class=" form-group formField">
                                 <label for="name" class="control-label">NOMBRE</label>
                                 <input type="text" id="name" name="name" class="form-control" />
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="email" class="control-label">EMAIL</label>
                                 <input type="email" id="email" name="email" class="form-control" />
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="password" class="control-label">CONTRASEÑA</label>
                                 <input type="password" id="password" name="password" class="form-control" />
                             </div>
-                            <div class="form-group">
-                                <label for="birthDate" class="control-label">EMAIL</label>
-                                <input type="date" id="birthDate" name="birthDate" class="form-control" />
+                            <div class="form-group formField">
+                                <label for="birthDate" class="control-label">FECHA DE NACIMIENTO</label>
+                                <input type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" id="birthDate" name="birthDate" class="form-control" />
                             </div>
-                            <button type="submit" class="btn btn-primary m-2 fs-5">REGISTRARSE</button>
+                            <button type="submit" class="btn btn-light priColor btn-form fw-bolder fs-5">REGISTRARSE</button>
                         </form>
-                    </from>
                 </div>
             </div>
         </div>
