--- a/HomeHero/Views/HeroViews/Login.cshtml
+++ b/HomeHero/Views/HeroViews/Login.cshtml
@@ -12,27 +12,25 @@
     <section class="darkMain">
         <div class="container text-white">
             <div class="row d-flex justify-content-between">
-                <div class="col-6">
-                    <from>
-                        <h2> Iniciar Sesion</h2>
-                        <p>¿Aun no estás registrado?<a asp-controller="Home" asp-action="SignUp">Registrate aquí.</a></p>
-                        <form asp-controller="Home" asp-action="SignUpAction" method="post">
-                            <div class="form-group">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                        <h2 class=" priColor h1 p-2"> Iniciar Sesion</h2>
+                    <p>¿Aun no estás registrado?  <a class="text-decoration-none priColor fw-bold" asp-controller="Home" asp-action="SignUp">Registrate aquí.</a></p>
+                    <form asp-controller="Home" asp-action="LogInAction" method="post">
+                            <div class="form-group formField">
                                 <label for="email" class="control-label">EMAIL</label>
                                 <input type="email" id="email" name="email" class="form-control" />
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="password" class="control-label">CONTRASEÑA</label>
                                 <input type="password" id="password" name="password" class="form-control" />
                             </div>
-                            <a asp-controller="Home" asp-action="RecoverSendCode">Olvide mi contraseña</a>
-                            <button type="submit" class="btn btn-primary m-2 fs-5">CONTINUAR</button>
+                            <a class="text-decoration-none priColor d-block pb-2 fw-bold" asp-controller="Home" asp-action="RecoverSendCode">Olvide mi contraseña</a>
+                        <button type="submit" class="btn btn-light priColor btn-form fw-bolder fs-5">CONTINUAR</button>
                         </form>
-                    </from>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4  text-center">
                     <img class="img-fluid" src="~/Images/logoLogIn.png" />
-                    <h1><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
+                    <h1 class="font-title title-page "><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
                 </div>
             </div>
 
