--- a/HomeHero/Views/HeroViews/RecoverSendCode.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverSendCode.cshtml
@@ -12,26 +12,26 @@
     <section class="darkMain">
         <div class="container text-white">
             <div class="row d-flex justify-content-between">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                     <from>
-                        <h2>Recupera tu contraseña</h2>
-                        <p>enviaremos un correo con el pin de recuperación</p>
+                        <h1 class="secColor h1">Recupera tu contraseña</h1>
+                        <p class="fw-bold">Enviaremos un correo con el pin de recuperación</p>
                         <form asp-controller="Home" asp-action="RecoverSendCodeAction" method="post">
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="email" class="control-label">EMAIL</label>
                                 <input type="email" id="email" name="email" class="form-control" />
                             </div>
-                            <div class="form-group">
+                            <div class="form-group formField">
                                 <label for="recoverPin" class="control-label">PIN DE RECUPERACION</label>
                                 <input type="number" id="recoverPin" name="recoverPin" class="form-control" />
                             </div>
-                            <button type="submit" class="btn btn-primary m-2 fs-5">CONTINUAR</button>
+                            <button type="submit" class="btn btn-light secColor btn-form fw-bolder fs-5">CONTINUAR</button>
                         </form>
                     </from>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4 text-center">
                     <img class="img-fluid" src="~/Images/logoRecover.png" />
-                    <h1><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
+                    <h1 class="font-title title-page "><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
                 </div>
             </div>
 
