--- a/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
@@ -2,36 +2,46 @@
     ViewData["Title"] = "Recuperacion";
 }
 
-@section logo{
-    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
-}
-@section inicioLI{
-
-}
 @section Main{
     <section class="darkMain">
         <div class="container text-white">
             <div class="row d-flex justify-content-between">
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                    @if (!string.IsNullOrEmpty(ViewBag.RecoveryM))
+                    {
+                        <div class="alert alert-success" role="alert">
+                            @ViewBag.RecoveryM
+                        </div>
+                    }
+                    @if (!string.IsNullOrEmpty(ViewBag.ValidateMessage))
+                    {
+
+                        <div class="alert alert-danger" role="alert">
+                            @ViewBag.ValidateMessage
+                        </div>
+                    }
                     <from>
-                        <h1 class="secColor">Recupera tu contraseña</h1>
-                        <p class="fw-bold">El pin es Correcto</p>
-                        <form asp-controller="Home" asp-action="SignUpAction" method="post">
-                            <div class="form-group formField">
+                        <h1 class="secColor h1">Recupera tu contraseña</h1>
+                        <form asp-controller="Home" asp-action="ValidateAction" method="post">
+                            <div class="form-group ">
+                                <label for="recoverPin" class="control-label">PIN DE RECUPERACION</label>
+                                <input id="recoverPin" name="recoverPin" class="form-control" />
+                            </div>
+                            <div class="form-group">
                                 <label for="newPassword" class="control-label">NUEVA CONTRASEÑA</label>
                                 <input type="password" id="newPassword" name="newPassword" class="form-control" />
                             </div>
-                            <div class="form-group formField">
+                            <div class="form-group">
                                 <label for="newPassword2" class="control-label">CONFIRMA LA NUEVA CONTRASEÑA</label>
                                 <input type="password" id="newPassword2" name="newPassword2" class="form-control" />
                             </div>
-                            <button type="submit" class="btn btn-light secColor btn-form fw-bolder fs-5">CONTINUAR</button>
+                            <button type="submit" class="btn btn-primary mt-2 fs-5">CONTINUAR</button>
                         </form>
                     </from>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4 text-center">
                     <img class="img-fluid" src="~/Images/logoRecover.png" />
-                    <h1 class="font-title title-page "><span class="h">H</span>ome<span class="h">H</span>Hero</h1>
+                    <h1 class="font-title title-page "><span class="h">H</span>ome<span class="h">H</span>ero</h1>
                 </div>
             </div>
 
