--- a/HomeHero/Views/HeroViews/Login.cshtml
+++ b/HomeHero/Views/HeroViews/Login.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Inicio Sesion";
 }
+@section logo{
+    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
+}
+@section inicioLI{}
+
 @section Main{
    
     <section class="darkMain">
