--- a/HomeHero/Views/Home/Index.cshtml
+++ b/HomeHero/Views/Home/Index.cshtml
@@ -2,5 +2,17 @@
     ViewData["Title"] = "HomeHero";
 } 
 
+@section logo{
+    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
+}
+@section inicioLI{
+    <li class="nav-item logIn ">
+        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="LogIn">Iniciar Sesion</a>
+    </li>
+    <li class="nav-item signUp">
+        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="SignUp">Registrarse</a>
+    </li>
+}
+
 @section Main{
 }
