--- a/HomeHero/Views/HeroViews/RecoverSendCode.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverSendCode.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Recuperacion";
 }
-
+@section logo{
+    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
+}
+@section inicioLI{
+}
 @section Main{
     <section class="darkMain">
 
