--- a/HomeHero/Views/HeroViews/profileMb.cshtml
+++ b/HomeHero/Views/HeroViews/profileMb.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Mi Perfil";
 }
 
@@ -16,7 +17,7 @@
             <div class="row d-flex justify-content-evenly align-items-start p-4 mt-3">
                <div class="col-6 p-2 thirdBg">
                     <h4>Perfil</h4>
-                    <p> </p>
+                    <p> @ViewBag.user</p>
                </div>
                 <div class="col-5 p-2 fourthBg reqProfile">
                     <h4>Mis solicitudes</h4>
