--- a/HomeHero/Views/Home/Privacy.cshtml
+++ b/HomeHero/Views/Home/Privacy.cshtml
@@ -3,4 +3,17 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+@section logo{
+    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
+}
+@section inicioLI{
+    <li class="nav-item logIn ">
+        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="LogIn">Iniciar Sesion</a>
+    </li>
+    <li class="nav-item signUp">
+        <a class="nav-link " asp-area="" asp-controller="Home" asp-action="SignUp">Registrarse</a>
+    </li>
+}
+
+@section Main{
+}
